--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -38,7 +38,7 @@ body {
 #nav-list {
 	margin-top: 0;
 	margin-bottom: 0;
-  	background-color: darkgray;
+  background-color: darkgray;
 }
 
 #nav-list a {
@@ -65,6 +65,12 @@ body {
 
 
 /* HOME PAGE */
+
+.container div {
+  margin-left:25px;
+  margin-right:25px;
+}
+
 .container > #menu {
 	color:#222;
 	margin-top: 20px;
@@ -98,53 +104,4 @@ body {
 	margin-top: 25px;
 	color: black;
 }
-
 /* END HOME PAGE */
-
-
-
-/********** Extra small devices only **********/
-@media (max-width: 767px) {
-  /* Header */
-  .navbar-brand {
-    padding-top: 10px;
-    height: 80px;
-  }
-  .navbar-brand h1 { /* Restaurant name */
-    padding-top: 10px;
-    font-size: 5vw; /* 1vw = 1% of viewport width */
-  }
-
-  #collapsable-nav a { /* Collapsed nav menu text */
-    font-size: 1.2em;
-  }
-  #collapsable-nav a span { /* Collapsed nav menu glyph */
-    font-size: 1em;
-    margin-right: 5px;
-  }
-  /* End Header */
-
-  /* Home page */
-  .container {
-	margin:20px;
-  }
-}
-
-
-/********** Super extra small devices Only :-) (e.g., iPhone 4) **********/
-@media (max-width: 479px) {
-  /* Header */
-  .navbar-brand h1 { /* Restaurant name */
-    padding-top: 5px;
-    font-size: 6vw;
-  }
-  /* End Header */
-  
-  /* Home page */
-
-  .container {
-	margin:10px;
-  }
-
-}
-
